# polytrader-console/src/lib/api/models/index.ts
@@ -19,7 +19,11 @@ export * from './market-tick-response';
 export * from './markets-response';
 export * from './run-identity-response';
 export * from './strategies-response';
+export * from './strategy-order-item';
+export * from './strategy-orders-response';
 export * from './strategy-response';
+export * from './strategy-signal-item';
+export * from './strategy-signals-response';
 export * from './strategy-type-response';
 export * from './strategy-types-response';
 export * from './update-strategy-request';
